--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -11,6 +11,14 @@
         background: #202124;
     }
 
+    a {
+        color: #565656;
+    }
+
+    a:hover {
+        color: #cccccc;
+    }
+
     *:focus {
         outline: none;
     }
