--- a/my_web/templates/my_web/botpage.html
+++ b/my_web/templates/my_web/botpage.html
@@ -27,7 +27,9 @@ QWriter
                 <div style="float: left; ">
                     <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                     <label class="username">Бот QWriter в Telegram</label><br>
-                    <label class="city">Бот qwriter был отключен, больше он не будет развиваться. На сайте можно просмотреть записи созданы им раньше (у них имеется колисчества лайков). Контент сайта наполняется как автоматически (Порфирьевич) так и вручную администратором.</label><br>
+                    <label class="city">
+                        Вы можете создавать собственные истории с помощью Telegram бота. Чтобы перейти к нему воспользуется <a href="https://t.me/QWriter_bot">этой ссылкой</a> или найдите его в поиске. (<a href="https://t.me/QWriter_bot">@QWriter_bot</a>)
+                    </label><br>
                     <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
                 </div>
             </div>
