--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -17,19 +17,25 @@
         <meta name="keywords" content="сайт, веб сайт, слово, истроия, текст, свобода, соц сеть, сеть, социальная, социалная сеть, пост, посты, рассказ, фантазия, публикации">
         <meta name="author" content="Koval Yaroslav">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.1/lazysizes.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.1/umd/popper.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a43f81414bd94c4082a94d93d4d00e72"}'></script>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+        <script src="{% static 'my_web/js/lazysizes.min.js %}"></script>
+        <script src="{% static 'my_web/js/jquery.min.js %}"></script>
+        <script src="{% static 'my_web/js/jquery.cookie.min.js %}"></script>
+        <script src="{% static 'my_web/js/popper.min.js %}"></script>
+        <script src="{% static 'my_web/js/bootstrap.min.js %}"></script>
+        <script src="{% static 'my_web/js/aos.js %}"></script>
+        <script defer src="{% static 'my_web/js/all.min.js %}"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119266831-9"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-119266831-9');
+        </script>
+        <link href="{% static 'my_web/css/bootstrap.min.css %}" rel="stylesheet">
+        <link href="{% static 'my_web/css/all.min.css %}" rel="stylesheet">
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
         <link rel="icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+        <link href="{% static 'my_web/css/aos.css %}" rel="stylesheet">
         <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet">
         <title>{% block title %}{% endblock %}</title>
         <style>
