--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -17,13 +17,13 @@
         <meta name="keywords" content="сайт, веб сайт, слово, истроия, текст, свобода, соц сеть, сеть, социальная, социалная сеть, пост, посты, рассказ, фантазия, публикации">
         <meta name="author" content="Koval Yaroslav">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <script src="{% static 'my_web/js/lazysizes.min.js %}"></script>
-        <script src="{% static 'my_web/js/jquery.min.js %}"></script>
-        <script src="{% static 'my_web/js/jquery.cookie.min.js %}"></script>
-        <script src="{% static 'my_web/js/popper.min.js %}"></script>
-        <script src="{% static 'my_web/js/bootstrap.min.js %}"></script>
-        <script src="{% static 'my_web/js/aos.js %}"></script>
-        <script defer src="{% static 'my_web/js/all.min.js %}"></script>
+        <script src="{% static 'my_web/js/lazysizes.min.js' %}"></script>
+        <script src="{% static 'my_web/js/jquery.min.js' %}"></script>
+        <script src="{% static 'my_web/js/jquery.cookie.min.js' %}"></script>
+        <script src="{% static 'my_web/js/popper.min.js' %}"></script>
+        <script src="{% static 'my_web/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'my_web/js/aos.js' %}"></script>
+        <script defer src="{% static 'my_web/js/all.min.js' %}"></script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119266831-9"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
@@ -31,11 +31,11 @@
           gtag('js', new Date());
           gtag('config', 'UA-119266831-9');
         </script>
-        <link href="{% static 'my_web/css/bootstrap.min.css %}" rel="stylesheet">
-        <link href="{% static 'my_web/css/all.min.css %}" rel="stylesheet">
+        <link href="{% static 'my_web/css/bootstrap.min.css' %}" rel="stylesheet">
+        <link href="{% static 'my_web/css/all.min.css' %}" rel="stylesheet">
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
         <link rel="icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
-        <link href="{% static 'my_web/css/aos.css %}" rel="stylesheet">
+        <link href="{% static 'my_web/css/aos.css' %}" rel="stylesheet">
         <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet">
         <title>{% block title %}{% endblock %}</title>
         <style>
