--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -16,6 +16,10 @@ QWriter
 Сайт, который не ограничивает твою фантазию. Придумывай истории и делись ними со всеми. Здесь нет цензуры и ограничений.
 {% endblock %}
 
+{% block public_re %}
+{{ token_re }}
+{% endblock %}
+
 {% block content %}
 {% load static %}
     <div class="col-12 col-lg-12 padding-block-center-box">
@@ -25,19 +29,19 @@ QWriter
                 <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                 <label class="username">Информация</label><br>
                 <label class="city">
-                    <b>Для связи с разработчиком используйте <a href="https://t.me/koval_yaroslav">Telegram</a> или <a href="mailto:koval@q-writer.com">электронный адрес</a>.</b>
+                    <b>Для связи с разработчиком используйте <a href="https://t.me/koval_yaroslav">Telegram</a> или <a href="mailto:koval@q-writer.com">электронный адрес</a>.<br/>This site uses <a href="https://www.google.com/recaptcha">Google ReCaptcha</a> technology</b>
                     <br/></label><br/>
                     <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
             </div>
         </div>
     </div>
-    <div class="row-posts-end"></div><br><button style="margin:0 auto;display:block;background-color:#121213;" class="btn load-more-end-butt">Загрузить еще&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
+    <div class="row-posts-end"></div><br><button style="margin:0 auto;display:block;background-color:#121213;" class="btn load-more-end-butt g-recaptcha">Загрузить еще&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
 {% endblock %}
 
 {% block js_module %}
     {% csrf_token %}
     <script type="text/javascript">
-        if(window.location.search<2){function imgError(o){return o.onerror="",o.src="{% static 'my_web/images/background.png' %}",!0}function load_ajax_end_page(o){const e=$(".load-more-end-butt"),n=e.find("span");var t=jQuery("[name=csrfmiddlewaretoken]").val();$.ajax({url:"{% url 'load_more' %}",type:"POST",data:{csrfmiddlewaretoken:t,validtoken:"{{ token_valid }}",typeload:o,additions:1,news:1},beforeSend:function(){e.attr("disabled",!0),n.addClass("d-inline-block"),AOS.init()},success:function(o){e.attr("disabled",!1),n.removeClass("d-inline-block"),"Ошибка валидации!"==o?alert("Ошибка. Не удалось подтвердить запрос. Перезагрузите страницу."):$(".row-posts-end").before(o),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()})},error:function(){alert("Ошибка. Не удалось получить ответ от сервера. Попробуйте перезагрузить страницу."),e.attr("disabled",!1),n.removeClass("d-inline-block")}})}function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(window).scroll(function(){$(window).scrollTop()==$(document).height()-$(window).height()&&setTimeout(function(){$(window).scrollTop()==$(document).height()-$(window).height()&&load_ajax_end_page("sessioncontinue")},100)}),$(document).ready(function(){load_ajax_end_page("newsession")}),$(".load-more-end-butt").on("click",function(){load_ajax_end_page("sessioncontinue")}),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()}),$("a.scroll-to").on("click",function(o){o.preventDefault();var e=$(this).attr("href");$("html, body").stop().animate({scrollTop:$(e).offset().top-60},900)}),$(window).scroll(function(){home_button=document.getElementById("h_butt"),1e3<$(window).scrollTop()?home_button.style.visibility="visible":home_button.style.visibility="hidden"}),$(document).on("click",function(o){$(o.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}else{function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(document).on("click",function(o){$(o.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}
+        if(window.location.search<2){function imgError(o){return o.onerror="",o.src="{% static 'my_web/images/background.png' %}",!0}function load_ajax_end_page(o){const e=$(".load-more-end-butt"),n=e.find("span");var t=jQuery("[name=csrfmiddlewaretoken]").val();grecaptcha.ready(function(){grecaptcha.execute("{{ token_re }}",{action:"submit"}).then(function(i){var a=i;$.ajax({url:"{% url 'load_more' %}",type:"POST",data:{csrfmiddlewaretoken:t,validtoken:"{{ token_valid }}",typeload:o,additions:1,news:1,gr_token:a},beforeSend:function(){e.attr("disabled",!0),n.addClass("d-inline-block"),AOS.init()},success:function(o){e.attr("disabled",!1),n.removeClass("d-inline-block"),"Ошибка валидации!"==o?alert("Ошибка. Не удалось подтвердить запрос. Перезагрузите страницу."):$(".row-posts-end").before(o),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()})},error:function(){alert("Ошибка. Не удалось получить ответ от сервера. Попробуйте перезагрузить страницу."),e.attr("disabled",!1),n.removeClass("d-inline-block")}})})})}function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(window).scroll(function(){$(window).scrollTop()==$(document).height()-$(window).height()&&setTimeout(function(){$(window).scrollTop()==$(document).height()-$(window).height()&&load_ajax_end_page("sessioncontinue")},100)}),$(document).ready(function(){load_ajax_end_page("newsession")}),$(".load-more-end-butt").on("click",function(){load_ajax_end_page("sessioncontinue")}),AOS.init(),$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip()}),$("a.scroll-to").on("click",function(o){o.preventDefault();var e=$(this).attr("href");$("html, body").stop().animate({scrollTop:$(e).offset().top-60},900)}),$(window).scroll(function(){home_button=document.getElementById("h_butt"),1e3<$(window).scrollTop()?home_button.style.visibility="visible":home_button.style.visibility="hidden"}),$(document).on("click",function(o){$(o.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}else{function onMenuClicked(){$(".menu_box").is(":hidden")?($(".menu_box").show(),$(".float_bg").show()):($(".menu_box").hide(),$(".float_bg").hide())}$(document).on("click",function(o){$(o.target).hasClass("float_bg")&&($(".menu_box").hide(),$(".float_bg").hide())})}
     </script>
 {% endblock %}
 
