update index.html template

--- a/my_web/templates/my_web/index.html
+++ b/my_web/templates/my_web/index.html
@@ -29,7 +29,7 @@ QWriter
                 <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                 <label class="username">Информация</label><br>
                 <label class="city">
-                    <b>Для связи с разработчиком используйте <a href="https://t.me/koval_yaroslav">Telegram</a> или <a href="mailto:koval@q-writer.com">электронный адрес</a>.<br/>This site uses <a href="https://www.google.com/recaptcha">Google ReCaptcha</a> technology</b>
+                    <b>Для связи с разработчиком используйте <a href="https://t.me/koval_yaroslav">Telegram</a> или <a href="mailto:koval@q-writer.com">электронный адрес</a>. This site uses <a href="https://www.google.com/recaptcha">Google ReCaptcha</a> technology.</b>
                     <br/></label><br/>
                     <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
             </div>
