story template update

--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -56,7 +56,7 @@
                     <div style="float: left;">
                         <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                         <label class="username">Пользовательская запись</label><br>
-                        <label class="city">{{ el.0.0|safe }}<br/><b>❤️ {{ el.0.2 }}</b><br/></b><i><u>Опубликовано {{ el.0.1 }} (UTC)</u></i></label><br>
+                        <label class="city">{{ el.0.0|safe }}<br/></b><i><u>Опубликовано {{ el.0.1 }} (UTC)</u></i></label><br>
                         <a style="font-size: 12px;" href="{% url 'storyaddr' %}{{ el.0.3 }}"><b>q-writer.com</b></a><br>
                     </div>
                 </div>
