--- a/my_web/templates/my_web/factview.html
+++ b/my_web/templates/my_web/factview.html
@@ -27,7 +27,7 @@ QWriter
             <div style="float: left; ">
                 <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                 <label class="username">Случайный факт</label><br>
-                <label class="city"><i>{{ factget.f_text }}</i><br></label><br><br>
+                <label class="city qwriter-content-block"><i>{{ factget.f_text }}</i><br></label><br><br>
                 <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
             </div>
         </div>
