--- a/my_web/templates/my_web/quoteview.html
+++ b/my_web/templates/my_web/quoteview.html
@@ -27,7 +27,7 @@ QWriter
             <div style="float: left; ">
                 <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                 <label class="username">Случайная цитата</label><br>
-                <label class="city"><i>„{{ quoteget.q_text }}“</i><br><br><b>{{ quoteget.q_author }}</b></label><br>
+                <label class="city qwriter-content-block"><i>„{{ quoteget.q_text }}“</i><br><br><b>{{ quoteget.q_author }}</b></label><br>
                 <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
             </div>
         </div>
