--- a/my_web/templates/my_web/factview.html
+++ b/my_web/templates/my_web/factview.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - {{ facttitle }}
+QWriter - Случайный факт
 {% endblock %}
 
 {% block title_header %}
