--- a/my_web/templates/my_web/postview.html
+++ b/my_web/templates/my_web/postview.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - {{ posttitle }}
+QWriter - Пользовательская запись
 {% endblock %}
 
 {% block title_header %}
