--- a/my_web/templates/my_web/quoteview.html
+++ b/my_web/templates/my_web/quoteview.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - {{ quotetitle }}
+QWriter - Случайная цитата
 {% endblock %}
 
 {% block title_header %}
