--- a/my_web/templates/my_web/storyview.html
+++ b/my_web/templates/my_web/storyview.html
@@ -1,7 +1,7 @@
 {% extends 'my_web/base.html' %}
 
 {% block title %}
-QWriter - {{ title }}
+QWriter - Пользовательская запись
 {% endblock %}
 
 {% block title_header %}
