--- a/my_web/templates/my_web/postview.html
+++ b/my_web/templates/my_web/postview.html
@@ -13,7 +13,7 @@ QWriter
 {% endblock %}
 
 {% block url_path %}
-{% url 'postaddr' %}{{ postget.id }}
+{% url 'postaddr' %}{{ postget.unique_id }}
 {% endblock %}
 
 {% block twitter_desc %}
