--- a/my_web/templates/my_web/quoteview.html
+++ b/my_web/templates/my_web/quoteview.html
@@ -13,7 +13,7 @@ QWriter
 {% endblock %}
 
 {% block url_path %}
-{% url 'quoteaddr' %}{{ quoteget.id }}
+{% url 'quoteaddr' %}{{ quoteget.unique_id }}
 {% endblock %}
 
 {% block twitter_desc %}
