--- a/my_web/templates/my_web/postview.html
+++ b/my_web/templates/my_web/postview.html
@@ -27,7 +27,8 @@ QWriter
             <div style="float: left; ">
                 <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1" style="color: 2"><i style="filter: invert(80%);" class="fas fa-circle"></i></label>
                 <label class="username">Пользовательская запись</label><br>
-                <label class="city qwriter-content-block"><i title="Текст который написал пользователь">{{ postget.user_text }}</i><b title="Текст который написал бот">{{ postget.bot_text }}</b></label><br><i style="font-size: 10px;"><u>Опубликовано {{ postget.time_field }} (UTC)</u></i><br>
+                <label class="city qwriter-content-block"><i title="Текст который написал пользователь">{{ postget.user_text }}</i><b title="Текст который написал бот">{{ postget.bot_text }}</b></label><br>
+                <label class="timepub"><i style="font-size: 12px;"><u>Опубликовано {{ postget.time_field }} (UTC)</u></i><br></label>
                 <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
             </div>
         </div>
