--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -906,7 +906,7 @@
     .user img {
         margin-right: 20px;
         float: left;
-        width: 100%;
+        max-width: 100%;
     }
 
     .user .username {
