template aware update

--- a/my_web/templates/my_web/awareview.html
+++ b/my_web/templates/my_web/awareview.html
@@ -13,11 +13,11 @@ QWriter
 {% endblock %}
 
 {% block og_desc %}
-{{ aware.title }}
+Страница сгенерирована с помощью технологий Q-Writer специально для AWARE
 {% endblock %}
 
 {% block twitter_desc %}
-{{ aware.title }}
+Страница сгенерирована с помощью технологий Q-Writer специально для AWARE
 {% endblock %}
 
 {% block content %}
