add news button link to news page

--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -76,6 +76,14 @@
                 </div>
             </div>
         </a>
+        <a href="{% url 'news_page' %}" >
+            <div class="menu_item menu_item_first">
+                <label>Новости</label>
+                <div class="icon_container">
+                    <i class="far fa-newspaper"></i>
+                </div>
+            </div>
+        </a>
         <a href="{% url 'status_page' %}">
             <div class="menu_item menu_item_last">
                 <label>Статус</label>
