top menu update

--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -77,7 +77,7 @@
             </div>
         </a>
         <a href="{% url 'news_page' %}" >
-            <div class="menu_item menu_item_first">
+            <div class="menu_item">
                 <label>Новости</label>
                 <div class="icon_container">
                     <i class="far fa-newspaper"></i>
@@ -85,7 +85,7 @@
             </div>
         </a>
         <a href="{% url 'status_page' %}">
-            <div class="menu_item menu_item_last">
+            <div class="menu_item">
                 <label>Статус</label>
                 <div class="icon_container">
                     <i class="fa fa-calendar"></i>
@@ -93,7 +93,7 @@
             </div>
         </a>
         <a href="{% url 'stats_page' %}">
-            <div class="menu_item menu_item_last">
+            <div class="menu_item">
                 <label>Статистика</label>
                 <div class="icon_container">
                     <i class="fas fa-signal"></i>
@@ -101,7 +101,7 @@
             </div>
         </a>
         <a href="{% url 'bot_page' %}" >
-            <div class="menu_item menu_item_last">
+            <div class="menu_item">
                 <label>Бот</label>
                 <div class="icon_container">
                     <i class="fab fa-telegram-plane"></i>
@@ -109,7 +109,7 @@
             </div>
         </a>
         <a href="{% url 'info_page' %}" >
-            <div class="menu_item menu_item_last">
+            <div class="menu_item">
                 <label>Информация</label>
                 <div class="icon_container">
                     <i class="fas fa-info"></i>
