top menu update

--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -109,7 +109,7 @@
             </div>
         </a>
         <a href="{% url 'info_page' %}" >
-            <div class="menu_item">
+            <div class="menu_item menu_item_last">
                 <label>Информация</label>
                 <div class="icon_container">
                     <i class="fas fa-info"></i>
