aware template update

--- a/my_web/templates/my_web/awareview.html
+++ b/my_web/templates/my_web/awareview.html
@@ -26,7 +26,10 @@ QWriter
         <div class="user box aos-init aos-animate" data-aos="fade-up">
             <div style="float:left;width: 100%;">
                 <label class="username">{{ aware.title }}</label><br/><br/>
-                <label class="city qwriter-content-block" style="width:100%;">{{ aware.page_html_code|safe }}<br></label><br><br>
+                <label class="city qwriter-content-block" style="width:100%;">
+                    {{ aware.page_html_code|safe }}<br/>
+                    <p>Эта страница сгенерирована специально для Telegram бота AWARE</p>
+                    <br></label><br><br>
                 <a style="font-size: 12px;" href="{% url 'index_page' %}"><b>q-writer.com</b></a><br>
             </div>
         </div>
