--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -30,6 +30,7 @@
           gtag('js', new Date());
           gtag('config', 'UA-119266831-9');
         </script>
+        <script data-ad-client="ca-pub-5845423947456266" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <link href="{% static 'my_web/css/bootstrap.min.css' %}" rel="stylesheet">
         <link href="{% static 'my_web/css/all.min.css' %}" rel="stylesheet">
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
