--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -37,6 +37,8 @@
         <link rel="icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
         <link href="{% static 'my_web/css/aos.css' %}" rel="stylesheet">
         <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
         <title>{% block title %}{% endblock %}</title>
         <style>
             #h_butt {
