--- a/my_web/static/my_web/css/main_page.css
+++ b/my_web/static/my_web/css/main_page.css
@@ -5,7 +5,7 @@
     html, body {
         width: 100%;
         height: 100%;
-        font-family: 'PT Sans', sans-serif;
+        font-family: 'Source Code Pro', monospace;
         fill: #000000;
         font-size: 16px;
         background: #202124;
