--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -38,7 +38,7 @@
         <link href="{% static 'my_web/css/aos.css' %}" rel="stylesheet">
         <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
         <title>{% block title %}{% endblock %}</title>
         <style>
             #h_butt {
