aware api update

--- a/my_web/templates/my_web/awareview.html
+++ b/my_web/templates/my_web/awareview.html
@@ -13,11 +13,11 @@ QWriter
 {% endblock %}
 
 {% block og_desc %}
-Страница сгенерирована с помощью технологий Q-Writer специально для AWARE
+{{ description }}
 {% endblock %}
 
 {% block twitter_desc %}
-Страница сгенерирована с помощью технологий Q-Writer специально для AWARE
+{{ description }}
 {% endblock %}
 
 {% block content %}
