aware api update

--- a/my_web/templates/my_web/awareview.html
+++ b/my_web/templates/my_web/awareview.html
@@ -13,9 +13,11 @@ QWriter
 {% endblock %}
 
 {% block og_desc %}
+{{ aware.title }}
 {% endblock %}
 
 {% block twitter_desc %}
+{{ aware.title }}
 {% endblock %}
 
 {% block content %}
