news dynamic load button

--- a/my_web/templates/my_web/news-feed.html
+++ b/my_web/templates/my_web/news-feed.html
@@ -35,7 +35,7 @@ QWriter
             </div>
         </div>
     </div>
-    <div class="row-posts-end"></div><br><button style="margin:0 auto;display:block;background-color:#121213;" class="btn btn-dark load-more-end-butt">Загрузить еще&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
+    <div class="row-posts-end"></div><br><button style="margin:0 auto;display:block;background-color:#121213;" class="btn btn-dark load-more-end-butt">{{ loading_button_text }}&nbsp;<span class="spinner-border spinner-border-sm" aria-hidden="true"></span></button>
 {% endblock %}
 
 {% block js_module %}
