--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -22,20 +22,18 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js" integrity="sha512-XKa9Hemdy1Ui3KSGgJdgMyYlUg1gM+QhL6cnlyTe2qzMCYm4nAZ1PsVerQzTTXzonUR+dmswHqgJPuwCq1MaAg==" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ==" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/antiscroll/0.9/antiscroll.min.js" integrity="sha512-cRFDwGIjXiZC1u1iNMH47IU7X+Q+Yx0vw1fwyw8r8i3cTQQW5N5EIDGS+sxWVhS1ZBIv0wAaaCne/ziz8k4fdA==" crossorigin="anonymous"></script>
         <script src="https://www.google.com/recaptcha/api.js?render={% block public_re %}{% endblock %}"></script>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119266831-9"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'UA-119266831-9');
-        </script>
+        <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-119266831-9");</script>
+        <script>$(function(){$(".antiscroll-wrap").antiscroll()});</script>
         <script data-ad-client="ca-pub-5845423947456266" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" integrity="sha512-P5MgMn1jBN01asBgU0z60Qk4QxiXo86+wlFahKrsQf37c9cro517WzVSPPV1tDKzhku2iJ2FVgL67wG03SGnNA==" crossorigin="anonymous" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
         <link rel="icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antiscroll/0.9/antiscroll.min.css" integrity="sha512-h33yfeWwh6+dwI5JBjTmQUZZL0KkG5UN8J+EDeElFhHlrjhxw+p5KrYmdF+UhL8SKWtx+N+/KIqM66Wo6rxGtw==" crossorigin="anonymous" />
         <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -57,7 +55,7 @@
             }
         </style>
     </head>
-    <body id="topSite" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
+    <body class="antiscroll-wrap" id="topSite" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
     <div class="container">
     <div class="map_search_box">
         <a href="#topSite" class="scroll-to menu_home" id="h_butt">
@@ -122,7 +120,7 @@
     </div>
     <div class="float_bg" style="display: none"></div>
     <br><br>
-    <div class="row" id="row-box-1">
+    <div class="row antiscroll-inner" id="row-box-1">
             {% block content %}
             {% endblock %}
 <br>
